--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,10 @@
   },
   "main": "./dist/angular-highcharts-chart.min.js",
   "dependencies": {
+    "angular": "~1.0.7",
+    "highcharts.com": "~v3.0.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.0.7"
   }
 }
