--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "homepage": "https://github.com/frapontillo/angular-highcharts",
   "author": {
-	"name": "Francesco Pontillo <francescopontillo@gmail.com>"
+    "name": "Francesco Pontillo <francescopontillo@gmail.com>"
   },
   "license": "Apache License 2.0",
   "repository": {
@@ -14,24 +14,21 @@
   "main": "dist/angular-highcharts.js",
   "dependencies": {},
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "devDependencies": {
-    "karma": "~0.8.5",
-    "grunt": "~0.4.1",
-    "grunt-contrib-watch": "~0.4.x",
+    "karma": "~0.12.x",
+    "grunt": "~0.4.x",
+    "grunt-karma": "~0.8.x",
+    "grunt-contrib-watch": "~0.6.x",
     "grunt-contrib-concat": "~0.3.x",
-    "grunt-contrib-uglify": "~0.2.x",
-    "grunt-contrib-jshint": "~0.4.x",
-    "grunt-contrib-copy": "~0.4.x",
-    "grunt-bump": "0.0.2",
-    "grunt-karma": "~0.4.x",
-    "grunt-conventional-changelog": "0.0.12",
-    "grunt-express": "~0.3.x",
-    "grunt-ngmin": "0.0.2",
-    "express": "~3.2.x"
+    "grunt-contrib-uglify": "~0.4.x",
+    "grunt-contrib-jshint": "~0.9.x",
+    "grunt-ngmin": "~0.0.3",
+    "karma-chrome-launcher": "^0.1.2",
+    "karma-phantomjs-launcher": "^0.1.2"
   }
 }
