--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-contrib-compass": "~0.8.0",
     "dgeni": "~0.3.0",
     "dgeni-packages": "~0.9.2",
-    "canonical-path": "~0.0.2"
+    "canonical-path": "~0.0.2",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
