--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   "main": "./dist/angular-highcharts.js",
   "dependencies": {
     "angular": "~1.2.15",
-    "highcharts-release": "highslide-software/highcharts-release#3.0.10",
+    "highcharts-release": "~4.0.1",
     "jquery": "~2.0.3"
   },
   "devDependencies": {
